test changes in contact - phone number

--- a/contact.html
+++ b/contact.html
@@ -226,8 +226,8 @@
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align">
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-weight: 700; text-transform: none;">
-                                                        <p><a style="text-decoration: underline;"
-                                                                href="#">+1-2345-2345</a></p>
+                                                        <p><a style="text-decoration: underline;" href="#">+90 (507) 186
+                                                                08 35</a></p>
                                                     </div>
                                                 </div>
                                             </div>
