--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
             <div style="width: 100vw; height: 100vh; " class="arki-page-wrapper" id="arki-page-wrapper">
-                <video style="height: 100%;" src="/images/hero-video.webm" plays-inline autoplay muted loop></video>
+                <video style="height: 100%;" src="/images/bya-hero.mp4" plays-inline autoplay muted loop></video>
             </div>
 
 
