--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 
 
             <div style="width: 100vw; height: 100vh; " class="arki-page-wrapper" id="arki-page-wrapper">
-                <video style="height: 100%;" src="/images/bya-hero.mp4" plays-inline autoplay muted loop></video>
+                <video style="height: 100%; width: 100%; object-fit: cover;" src="/images/bya-hero.mp4" plays-inline
+                    autoplay muted loop></video>
             </div>
 
 
