--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 
 <body
     class="home page-template-default page page-id-13835 theme-arki gdlr-core-body woocommerce-no-js arki-body arki-body-front arki-full arki-with-sticky-navigation arki-blockquote-style-3 gdlr-core-link-to-lightbox"
-    data-home-url="Home.html">
+    data-home-url="index.html">
     <div class="arki-mobile-header-wrap">
         <div class="arki-mobile-header arki-header-background arki-style-slide arki-sticky-mobile-navigation"
             id="arki-mobile-header">
             <div class="arki-mobile-header-container arki-container clearfix">
                 <div class="arki-logo arki-item-pdlr">
                     <div class="arki-logo-inner">
-                        <a class="arki-fixed-nav-logo" href="Home.html">
+                        <a class="arki-fixed-nav-logo" href="index.html">
                             <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
                         </a>
-                        <a class="arki-orig-logo" href="Home.html"><img src="upload/logo.png" alt="" width="82"
+                        <a class="arki-orig-logo" href="index.html"><img src="upload/logo.png" alt="" width="82"
                                 height="25" title="logo" /></a>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li
                                     class="menu-item menu-item-home current-menu-item current-menu-ancestor menu-item-has-children">
-                                    <a href="Home.html" aria-current="page">Home</a>
+                                    <a href="index.html" aria-current="page">Home</a>
                                 </li>
                                 <li class="menu-item menu-item-has-children">
                                     <a href="exterior-design.html">Services</a>
@@ -90,10 +90,10 @@
                     <div class="arki-header-container-inner clearfix">
                         <div class="arki-logo arki-item-pdlr">
                             <div class="arki-logo-inner">
-                                <a class="arki-fixed-nav-logo" href="Home.html">
+                                <a class="arki-fixed-nav-logo" href="index.html">
                                     <img src="/images/logo.png" alt="" width="160" title="logo" />
                                 </a>
-                                <a class="arki-orig-logo" href="Home.html">
+                                <a class="arki-orig-logo" href="index.html">
                                     <img src="/images/logo.png" alt="" width="160" title="logo" />
                                 </a>
                             </div>
@@ -103,7 +103,7 @@
                                 <ul id="menu-main-navigation-1" class="sf-menu">
                                     <li
                                         class="menu-item menu-item-home current-menu-item current-menu-ancestor menu-item-has-children arki-normal-menu">
-                                        <a href="Home.html" class="sf-with-ul-pre">Home</a>
+                                        <a href="index.html" class="sf-with-ul-pre">Home</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children arki-normal-menu">
                                         <a href="exterior-design.html" class="sf-with-ul-pre">Services</a>
