--- a/exterior-design.html
+++ b/exterior-design.html
@@ -133,103 +133,61 @@
 
 
 
-            <div class="arki-page-title-wrap arki-style-custom arki-center-align">
-                <div class="arki-header-transparent-substitute"></div>
-                <div class="arki-page-title-overlay"></div>
-                <div class="arki-page-title-container arki-container">
-                    <div class="arki-page-title-content arki-item-pdlr">
-                        <h1 class="arki-page-title">Exterior Design</h1>
-                        <div class="arki-page-caption">We're an architecture firm helping growing organizations.</div>
-                    </div>
-                </div>
-            </div>
             <div class="arki-page-wrapper" id="arki-page-wrapper">
                 <div class="gdlr-core-page-builder-body">
                     <div class="manual-services">
                         <div class="manual-service">
                             <div class="manual-image-wrapper">
-                                <img class="service-image" src="/images/placeholder-300x300.png" alt="placeholder">
+                                <img class="service-image" src="/images/triangle-glass.png" alt="placeholder">
                             </div>
-                            <h3>Mimarlık</h3>
+                            <h3>Architecture</h3>
 
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptatibus esse ipsa
-                                neque quos, perspiciatis deleniti distinctio reprehenderit necessitatibus nesciunt
-                                dolorum recusandae culpa, laudantium eaque est in consequuntur officia exercitationem?
+                            <p>
+                                At BYARCH, we don’t just design spaces; we create experiences. From concept development
+                                to the finest construction details, every project—whether residential or
+                                commercial—reflects our commitment to quality, innovation, and sustainability. Driven by
+                                a passion for design that goes beyond aesthetics, we transform ideas into functional,
+                                enduring spaces that inspire.
                             </p>
                         </div>
                         <div class="manual-service">
                             <div class="manual-image-wrapper">
-                                <img class="service-image" src="/images/placeholder-300x300.png" alt="placeholder">
+                                <img class="service-image" src="/images/table-chair.png" alt="placeholder">
                             </div>
-                            <h3>İç Mimarlık</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptatibus esse ipsa
-                                neque quos, perspiciatis deleniti distinctio reprehenderit necessitatibus nesciunt
-                                dolorum recusandae culpa, laudantium eaque est in consequuntur officia exercitationem?
+                            <h3>Interior Design</h3>
+                            <p>At BYARCH, we believe in the importance of seamless integration between architecture and
+                                interior design to ensure the overall harmony of every project. That’s why we not only
+                                handle architectural designs but also offer meticulously crafted interior design
+                                solutions.
                             </p>
                         </div>
                         <div class="manual-service">
                             <div class="manual-image-wrapper">
-                                <img class="service-image" src="/images/placeholder-300x300.png" alt="placeholder">
+                                <img class="service-image" src="/images/weird-columns.png" alt="placeholder">
                             </div>
-                            <h3>Görselleştirme</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptatibus esse ipsa
-                                neque quos, perspiciatis deleniti distinctio reprehenderit necessitatibus nesciunt
-                                dolorum recusandae culpa, laudantium eaque est in consequuntur officia exercitationem?
+                            <h3>Visualization</h3>
+                            <p>We view ourselves as storytellers rather than mere creators of images. Our goal is not
+                                just to produce visually appealing content but to capture the essence and true potential
+                                of each project in an authentic manner.
+                                <br>
+                                <br>
+                                We aspire for our clients to take pride in the visuals we deliver, reflecting our shared
+                                commitment to excellence. Utilizing a blend of innovative tools and techniques, we aim
+                                to craft visuals that not only impress but also inspire an emotional connection with
+                                viewers.
                             </p>
                         </div>
 
 
                     </div>
-                    <div class="gdlr-core-pbf-wrapper" style="padding: 130px 0px 130px 0px;">
-                        <div class="gdlr-core-pbf-background-wrap">
-                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(upload/AB05-BG-Black.jpg); background-size: cover; background-position: center;"
-                                data-parallax-speed="0"></div>
-                        </div>
-                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first"
-                                    id="gdlr-core-column-16919">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js">
-                                        <div class="gdlr-core-pbf-background-wrap"></div>
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js"
-                                            style="max-width: 720px;">
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-                                                    style="padding-bottom: 35px;">
-                                                    <div class="gdlr-core-title-item-title-wrap">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title"
-                                                            style="font-size: 43px; font-weight: 500; letter-spacing: 4px; text-transform: none; color: #ffffff;">
-                                                            Check Out Our Works<span
-                                                                class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
-                                                        </h3>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align gdlr-core-no-p-space"
-                                                    style="padding-bottom: 50px;">
-                                                    <div class="gdlr-core-text-box-item-content"
-                                                        style="font-size: 18px; font-weight: 400; letter-spacing: 1px; text-transform: none; color: #ffffff;">
-                                                        <p>We work closely with clients to gain an understanding of your
-                                                            desires both philoso phical and practical.</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"
-                                                    style="padding-bottom: 0px;">
-                                                    <a class="gdlr-core-button gdlr-core-button-transparent gdlr-core-center-align gdlr-core-button-with-border"
-                                                        href="#"
-                                                        style="font-size: 17px;font-weight: 500;letter-spacing: 1px;text-transform: none;border-radius: 0px;-moz-border-radius: 0px;-webkit-border-radius: 0px;border-width: 2px 2px 2px 2px;border-color: #ffffff;">
-                                                        <span class="gdlr-core-content">View Portfolio</span>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="gdlr-core-pbf-wrapper" style="padding: 50px 0px 50px 0px;">
+                        <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"
+                            style="padding-bottom: 0px;">
+                            <a class="gdlr-core-button gdlr-core-button-transparent gdlr-core-center-align gdlr-core-button-with-border"
+                                href="/portfolio-2-columns-with-frame.html"
+                                style="font-size: 17px;font-weight: 500;letter-spacing: 1px;text-transform: none;border-radius: 0px;-moz-border-radius: 0px;-webkit-border-radius: 0px;border-width: 2px 2px 2px 2px;border-color: #ffffff;">
+                                <span class="gdlr-core-content">View Portfolio</span>
+                            </a>
                         </div>
                     </div>
                 </div>
