Major updates done, works page left

--- a/exterior-design.html
+++ b/exterior-design.html
@@ -44,9 +44,9 @@
                 <div class="arki-logo arki-item-pdlr">
                     <div class="arki-logo-inner">
                         <a class="arki-fixed-nav-logo" href="index.html">
-                            <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
                         </a>
-                        <a class="arki-orig-logo" href="index.html"><img src="upload/logo.png" alt="" width="82"
+                        <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
+                        <a class="arki-orig-logo" href="index.html"><img src="images/logo.png" alt="" width="82"
                                 height="25" title="logo" /></a>
                     </div>
                 </div>
@@ -91,10 +91,10 @@
                         <div class="arki-logo arki-item-pdlr">
                             <div class="arki-logo-inner">
                                 <a class="arki-fixed-nav-logo" href="index.html">
-                                    <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                                    <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                                 </a>
                                 <a class="arki-orig-logo" href="index.html">
-                                    <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                                    <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                                 </a>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                     <div class="manual-services">
                         <div class="manual-service">
                             <div class="manual-image-wrapper">
-                                <img class="service-image" src="/images/triangle-glass.png" alt="placeholder">
+                                <img class="service-image" src="/images/triangle-glass.jpg" alt="placeholder">
                             </div>
                             <h3>Architecture</h3>
 
@@ -152,7 +152,7 @@
                         </div>
                         <div class="manual-service">
                             <div class="manual-image-wrapper">
-                                <img class="service-image" src="/images/table-chair.png" alt="placeholder">
+                                <img class="service-image" src="/images/table-chair.jpg" alt="placeholder">
                             </div>
                             <h3>Interior Design</h3>
                             <p>At BYARCH, we believe in the importance of seamless integration between architecture and
@@ -163,7 +163,7 @@
                         </div>
                         <div class="manual-service">
                             <div class="manual-image-wrapper">
-                                <img class="service-image" src="/images/weird-columns.png" alt="placeholder">
+                                <img class="service-image" src="/images/weird-columns.jpg" alt="placeholder">
                             </div>
                             <h3>Visualization</h3>
                             <p>We view ourselves as storytellers rather than mere creators of images. Our goal is not
