--- a/portfolio-2-columns-with-frame.html
+++ b/portfolio-2-columns-with-frame.html
@@ -44,9 +44,9 @@
                 <div class="arki-logo arki-item-pdlr">
                     <div class="arki-logo-inner">
                         <a class="arki-fixed-nav-logo" href="index.html">
-                            <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                            <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                         </a>
-                        <a class="arki-orig-logo" href="index.html"><img src="upload/logo.png" alt="" width="82"
+                        <a class="arki-orig-logo" href="index.html"><img src="images/logo.png" alt="" width="82"
                                 height="25" title="logo" /></a>
                     </div>
                 </div>
@@ -91,10 +91,10 @@
                         <div class="arki-logo arki-item-pdlr">
                             <div class="arki-logo-inner">
                                 <a class="arki-fixed-nav-logo" href="index.html">
-                                    <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                                    <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                                 </a>
                                 <a class="arki-orig-logo" href="index.html">
-                                    <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                                    <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                                 </a>
                             </div>
                         </div>
