--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
                 <div class="arki-logo arki-item-pdlr">
                     <div class="arki-logo-inner">
                         <a class="arki-fixed-nav-logo" href="index.html">
-                            <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                            <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                         </a>
-                        <a class="arki-orig-logo" href="index.html"><img src="upload/logo.png" alt="" width="82"
+                        <a class="arki-orig-logo" href="index.html"><img src="images/logo.png" alt="" width="82"
                                 height="25" title="logo" /></a>
                     </div>
                 </div>
@@ -91,10 +91,10 @@
                         <div class="arki-logo arki-item-pdlr">
                             <div class="arki-logo-inner">
                                 <a class="arki-fixed-nav-logo" href="index.html">
-                                    <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                                    <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                                 </a>
                                 <a class="arki-orig-logo" href="index.html">
-                                    <img src="upload/logo.png" alt="" width="82" height="25" title="logo" />
+                                    <img src="images/logo.png" alt="" width="82" height="25" title="logo" />
                                 </a>
                             </div>
                         </div>
@@ -134,12 +134,12 @@
 
             <div class="arki-page-wrapper" id="arki-page-wrapper">
                 <div class="gdlr-core-page-builder-body">
-                    <div class="gdlr-core-pbf-wrapper" style="padding: 180px 0px 160px 0px;" data-skin="white"
+                    <div class="gdlr-core-pbf-wrapper" style="padding: 80px 0px 160px 0px;;" data-skin="white"
                         id="gdlr-core-wrapper-1">
-                        <div class="gdlr-core-pbf-background-wrap" style="background-color: #ffffff;">
-                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="opacity: 0.4; background-image: url(upload/pexels-photo-911738.jpeg); background-size: cover; background-position: center;"
-                                data-parallax-speed="0.3"></div>
+                        <div class="gdlr-core-pbf-background-wrap"
+                            style="opacity: 0.4; background-image: url(/images/pexels-photo-911738.jpeg); background-size: cover; background-position: center;"
+                            data-parallax-speed="0.3">
+                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js" data-gdlr-animation="fadeInUp"
                             data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
@@ -167,7 +167,7 @@
                     <div class="gdlr-core-pbf-wrapper" style="padding: 30px 0px 20px 0px;" data-skin="Contact link">
                         <div class="gdlr-core-pbf-background-wrap" style="background-color: #141414;">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="opacity: 0.14; background-image: url(upload/shutterstock_356735735.jpg); background-size: cover; background-position: center;"
+                                style="opacity: 0.1; background-image: url(images/shutterstock_356735735.jpg); background-size: cover; background-position: center;"
                                 data-parallax-speed="0.2"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
@@ -207,17 +207,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-center-align">
                                                     <div class="gdlr-core-divider-container" style="max-width: 30px;">
                                                         <div class="gdlr-core-divider-line gdlr-core-skin-divider"
-                                                            style="border-color: #ffffff; border-width: 3px;"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"
-                                                    style="padding-bottom: 0px;">
-                                                    <div class="gdlr-core-text-box-item-content"
-                                                        style="text-transform: none; color: #ffffff;">
-                                                        <p>A wonderful serenity has taken possession of my entire soul,
-                                                            like these.</p>
+                                                            style="border-color: #909090; border-width: 3px;"></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -226,7 +216,7 @@
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align">
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-weight: 700; text-transform: none;">
-                                                        <p><a style="text-decoration: underline;" href="#">+90 (507) 186
+                                                        <p><a style="text-decoration: none;" href="#">+90 (507) 186
                                                                 08 35</a></p>
                                                     </div>
                                                 </div>
@@ -268,17 +258,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-center-align">
                                                     <div class="gdlr-core-divider-container" style="max-width: 30px;">
                                                         <div class="gdlr-core-divider-line gdlr-core-skin-divider"
-                                                            style="border-color: #ffffff; border-width: 3px;"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"
-                                                    style="padding-bottom: 0px;">
-                                                    <div class="gdlr-core-text-box-item-content"
-                                                        style="text-transform: none; color: #ffffff;">
-                                                        <p>A wonderful serenity has taken possession of my entire soul,
-                                                            like these.</p>
+                                                            style="border-color: #909090; border-width: 3px;"></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -288,8 +268,9 @@
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-weight: 700; text-transform: none;">
                                                         <p>
-                                                            <a style="text-decoration: underline;" href="#">
-                                                                <span class="__cf_email__">test@gmail.com</span>
+                                                            <a style="text-decoration: none;" href="#">
+                                                                <span
+                                                                    class="__cf_email__">info@berkayyildizmimarlik.com</span>
                                                             </a>
                                                         </p>
                                                     </div>
@@ -332,7 +313,7 @@
                                                     class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-center-align">
                                                     <div class="gdlr-core-divider-container" style="max-width: 30px;">
                                                         <div class="gdlr-core-divider-line gdlr-core-skin-divider"
-                                                            style="border-color: #ffffff; border-width: 3px;"></div>
+                                                            style="border-color: #909090; border-width: 3px;"></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -345,16 +326,6 @@
                                                             4 apt. Flawing Street. The Grand Avenue.<br />
                                                             Liverpool, UK 33342
                                                         </p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align">
-                                                    <div class="gdlr-core-text-box-item-content"
-                                                        style="font-weight: 700; text-transform: none;">
-                                                        <p><a style="text-decoration: underline;" href="#">View On
-                                                                Google Map</a></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -480,7 +451,7 @@
                 </div>
             </div>
 
-
+            <!--
             <footer>
                 <div class="arki-footer-wrapper">
                     <div class="arki-footer-container arki-container clearfix">
@@ -542,6 +513,7 @@
                     </div>
                 </div>
             </footer>
+            -->
         </div>
     </div>
 
