home + services main layout

--- a/about/index.html
+++ b/about/index.html
@@ -7,11 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
+
 
 </head>
 
 <body>
+
+    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+
     <section class="about-section">
+
+
         <h3>We create spaces
             that inspire tomorrow.</h3>
 
