--- a/services/index.html
+++ b/services/index.html
@@ -7,20 +7,26 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
+
 
 </head>
 
 <body>
+
+    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+
     <section class="services-section">
+
 
         <div class="services-container">
             <div class="service">
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/triangle-glass.jpg" alt="placeholder">
                 </div>
-                <h3>Architecture</h3>
+                <h3 class="service-h3">Architecture</h3>
 
-                <p>
+                <p class="service-p">
                     At BYARCH, we don’t just design spaces; we create experiences. From concept development
                     to the finest construction details, every project—whether residential or
                     commercial—reflects our commitment to quality, innovation, and sustainability. Driven by
@@ -32,8 +38,9 @@
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/table-chair.jpg" alt="placeholder">
                 </div>
-                <h3>Interior Design</h3>
-                <p>At BYARCH, we believe in the importance of seamless integration between architecture and
+                <h3 class="service-h3">Interior Design</h3>
+                <p class="service-p">At BYARCH, we believe in the importance of seamless integration between
+                    architecture and
                     interior design to ensure the overall harmony of every project. That’s why we not only
                     handle architectural designs but also offer meticulously crafted interior design
                     solutions.
@@ -43,8 +50,9 @@
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/weird-columns.jpg" alt="placeholder">
                 </div>
-                <h3>Visualization</h3>
-                <p>We view ourselves as storytellers rather than mere creators of images. Our goal is not
+                <h3 class="service-h3">Visualization</h3>
+                <p class="service-p">We view ourselves as storytellers rather than mere creators of images. Our goal is
+                    not
                     just to produce visually appealing content but to capture the essence and true potential
                     of each project in an authentic manner.
                     <br>
