--- a/home/index.html
+++ b/home/index.html
@@ -7,12 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
+
 
 </head>
 
 <body>
 
     <section class="home-section">
+
+        <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+
         <div style="width: 100dvw; height: 100dvh;">
             <video style="height: 100%; width: 100%; object-fit: cover;" playsinline autoplay muted loop>
                 <source src="/images/bya-hero.webm" type="video/webm">
