--- a/works/index.html
+++ b/works/index.html
@@ -7,11 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 
 </head>
 
 <body>
-    <section class="works-section"></section>
+
+    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+
+    <section class="works-section">
+
+
+    </section>
 </body>
 
 </html>
