--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <script src="/js/script.js" defer></script> <!-- Include your main script.js file -->
     <script src="/js/navbar.js" defer></script> <!-- Load the navbar component script -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+        </style>
 </head>
 
 
