home services done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="/js/navbar.js" defer></script> <!-- Load the navbar component script -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-        </style>
+    </style>
 </head>
 
 
@@ -28,11 +28,7 @@
         </div>
 
         <div class="prism-container">
-            <span class="static-text">Berkay Yıldız</span>
-            <div class="rotating-text">
-                <span class="text" id="architecture">Architecture</span>
-                <span class="text" id="visualisation">Visualisation</span>
-            </div>
+            <img src="/images/toggling-text.gif" alt="toggling text gif" height="80">
         </div>
     </section>
 
