--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,6 @@
 <nav class="navbar">
-    <div class="navbar-logo">
-        <a href="/">Berkay Yıldız</a>
-    </div>
+    <img src="/images/logo.png" alt="navbar logo" width="155" style="margin-right: auto;">
+
     <button class="navbar-toggle" aria-label="Toggle navigation">
         <span></span>
         <span></span>
@@ -9,11 +8,22 @@
     </button>
     <div class="navbar-menu">
         <ul class="navbar-links">
-            <li><a href="/home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
             <li><a href="/works">Works</a></li>
+        </ul>
+        <ul class="navbar-links">
+            <li>
+                <div class="language-buttons" id="langTr">TR</div>
+            </li>
+            <li>
+                <div class="language-buttons" id="langDe">DE</div>
+            </li>
+            <li>
+                <div class="language-buttons active" id="langEn">EN</div>
+            </li>
         </ul>
     </div>
 </nav>
