--- a/services/index.html
+++ b/services/index.html
@@ -38,6 +38,7 @@
                     a passion for design that goes beyond aesthetics, we transform ideas into functional,
                     enduring spaces that inspire.
                 </p>
+
             </div>
             <div class="service">
                 <div class="service-image-wrapper">
@@ -50,6 +51,8 @@
                     handle architectural designs but also offer meticulously crafted interior design
                     solutions.
                 </p>
+                <div class="horizontal-line line2"></div>
+
             </div>
             <div class="service">
                 <div class="service-image-wrapper">
@@ -67,11 +70,16 @@
                     to craft visuals that not only impress but also inspire an emotional connection with
                     viewers.
                 </p>
+                <div class="horizontal-line line1"></div>
             </div>
-
-
         </div>
-
+        <div class="view-portfolio">
+            <div class="horizontal-line upper-line"></div>
+            <div class="horizontal-line left-line"></div>
+            <div class="circle"></div>
+            <div class="rectanglular-bg"></div>
+            <p class="view-portfolio-p">View Portfolio</p>
+        </div>
 
     </section>
 
