--- a/about/index.html
+++ b/about/index.html
@@ -19,19 +19,42 @@
     <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
 
     <section class="about-section">
+        <div class="about-content">
+            <div class="about-bg-lines">
+                <div class="about-bg-line"></div>
+                <div class="about-bg-line"></div>
+                <div class="about-bg-line"></div>
+            </div>
+            <div class="about-left-column">
+                <div class="about-h3-div">
+                    <h3 class="about-h3"><span style="    display: inline-flex;
+                        margin-right: 8px;
+                        border-top: 2px solid black;
+                        /* line-height: 50px; */
+                        height: 70px;
+                        justify-content: flex-end;
+                        align-items: flex-end;">We</span> create
+                        spaces <br>
+                        that inspire <br>
+                        tomorrow.</h3>
+                </div>
+                <div class="circle about">
+
+                </div>
+            </div>
 
 
-        <h3>We create spaces
-            that inspire tomorrow.</h3>
-
-        <p>BYARCH is an Izmir-based studio specializing in contemporary architecture, interior design, and landscape
-            integration. Since our inception, we have dedicated ourselves to creating spaces that are not only
-            functional but also deeply connected to their surroundings.<br>
-            <br>
-            We collaborate closely with clients and project partners at every stage of the process, including
-            permitting, implementation, interior design, and visualization, ensuring that the original intent seamlessly
-            transforms into the final result.
-        </p>
+            <p class="about-p">BYARCH is an Izmir-based studio specializing in contemporary architecture, interior
+                design, and landscape
+                integration. Since our inception, we have dedicated ourselves to creating spaces that are not only
+                functional but also deeply connected to their surroundings.<br>
+                <br>
+                We collaborate closely with clients and project partners at every stage of the process, including
+                permitting, implementation, interior design, and visualization, ensuring that the original intent
+                seamlessly
+                transforms into the final result.
+            </p>
+        </div>
     </section>
 </body>
 
