contact footer added, services photo width adjusted to 20vw

--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
+    <script src="../js/footer.js" defer></script>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -19,12 +21,12 @@
     <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
 
     <section class="about-section">
+        <div class="about-bg-lines">
+            <div class="about-bg-line"></div>
+            <div class="about-bg-line"></div>
+            <div class="about-bg-line"></div>
+        </div>
         <div class="about-content">
-            <div class="about-bg-lines">
-                <div class="about-bg-line"></div>
-                <div class="about-bg-line"></div>
-                <div class="about-bg-line"></div>
-            </div>
             <div class="about-left-column">
                 <div class="about-h3-div">
                     <h3 class="about-h3"><span style="    display: inline-flex;
@@ -56,6 +58,8 @@
             </p>
         </div>
     </section>
+    <div id="footer-placeholder"></div>
+
 </body>
 
 </html>
