--- a/works/index.html
+++ b/works/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
+    <script src="../js/footer.js" defer></script>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-        </style>
+    </style>
 </head>
 
 <body>
@@ -21,6 +23,8 @@
 
 
     </section>
+    <div id="footer-placeholder"></div>
+
 </body>
 
 </html>
