--- a/services/index.html
+++ b/services/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
+    <script src="../js/footer.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -82,6 +83,7 @@
         </div>
 
     </section>
+    <div id="footer-placeholder"></div>
 
 </body>
 
