fav icon and tab names

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B Y Arch</title>
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+    <link rel="icon" type="image/x-icon" href="/images/fav-icon.png">
+
     <script src="/js/script.js" defer></script> <!-- Include your main script.js file -->
     <script src="/js/navbar.js" defer></script> <!-- Load the navbar component script -->
     <style>
