--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>B Y Arch - About</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
     <script src="../js/footer.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
