--- a/services/index.html
+++ b/services/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>B Y Arch - Services</title>
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
+    <link rel="icon" type="image/x-icon" href="../images/fav-icon.png">
+
     <script src="../js/script.js" defer></script>
     <script src="../js/navbar.js" defer></script>
     <script src="../js/footer.js" defer></script>
