--- a/works/index.html
+++ b/works/index.html
@@ -22,6 +22,43 @@
     <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
 
     <section class="works-section">
+        <div class="works-container">
+            <div class="work">
+                <img src="../images/mutfak.jpg" alt="mutfak" class="work-image">
+                <div class="work-name">
+                    <h3 class="work-h3">MY Kitchen Design</h3>
+                    <p class="work-p">Interior Design</p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="../images/banyo.jpg" alt="banyo" class="work-image">
+                <div class="work-name">
+                    <h3 class="work-h3">OS Bathroom Design</h3>
+                    <p class="work-p">Interior Design</p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="../images/salon.jpg" alt="" class="work-image">
+                <div class="work-name">
+                    <h3 class="work-h3">SY Livingroom Design</h3>
+                    <p class="work-p">Interior Design</p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="../images/house1.jpg" alt="" class="work-image">
+                <div class="work-name">
+                    <h3 class="work-h3">SS House</h3>
+                    <p class="work-p">Architecture</p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="../images/house2.jpg" alt="" class="work-image">
+                <div class="work-name">
+                    <h3 class="work-h3">SS House</h3>
+                    <p class="work-p">Architecture</p>
+                </div>
+            </div>
+        </div>
 
 
     </section>
