--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <img src="/images/logo.png" alt="navbar logo" width="140" style="margin-right: auto;">
 
-    <button class="navbar-toggle" aria-label="Toggle navigation">
+    <button class="navbar-toggle" id="navbar-toggle" aria-label="Toggle navigation">
         <span></span>
         <span></span>
         <span></span>
