side navbar for mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="prism-container">
-            <img src="/images/toggling-text.gif" alt="toggling text gif" height="80">
+            <img class="toggling-text" src="/images/toggling-text.gif" alt="toggling text gif" height="80">
         </div>
     </section>
 
