--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
             </div>
 
 
-            <p class="about-p">BYARCH is an Izmir-based studio specializing in contemporary architecture, interior
+            <p class="about-p">BY Arch is an Izmir-based studio specializing in contemporary architecture, interior
                 design, and landscape
                 integration. Since our inception, we have dedicated ourselves to creating spaces that are not only
                 functional but also deeply connected to their surroundings.<br>
