--- a/services/index.html
+++ b/services/index.html
@@ -35,7 +35,7 @@
                 <h3 class="service-h3">Architecture</h3>
 
                 <p class="service-p">
-                    At BYARCH, we don’t just design spaces; we create experiences. From concept development
+                    At BY Arch, we don’t just design spaces; we create experiences. From concept development
                     to the finest construction details, every project—whether residential or
                     commercial—reflects our commitment to quality, innovation, and sustainability. Driven by
                     a passion for design that goes beyond aesthetics, we transform ideas into functional,
@@ -48,7 +48,7 @@
                     <img class="service-image" src="/images/table-chair.jpg" alt="placeholder">
                 </div>
                 <h3 class="service-h3">Interior Design</h3>
-                <p class="service-p">At BYARCH, we believe in the importance of seamless integration between
+                <p class="service-p">At BY Arch, we believe in the importance of seamless integration between
                     architecture and
                     interior design to ensure the overall harmony of every project. That’s why we not only
                     handle architectural designs but also offer meticulously crafted interior design
