--- a/services/index.html
+++ b/services/index.html
@@ -81,7 +81,10 @@
             <div class="horizontal-line left-line"></div>
             <div class="circle"></div>
             <div class="rectanglular-bg"></div>
-            <p class="view-portfolio-p">View Portfolio</p>
+            <a href="https://berkayyildizmimarlik.com/works/"
+                style="text-decoration: none; color: black; height: 100%;">
+                <p class="view-portfolio-p">View Portfolio</p>
+            </a>
         </div>
 
     </section>
