--- a/services/index.html
+++ b/services/index.html
@@ -79,7 +79,7 @@
         <div class="view-portfolio">
             <div class="horizontal-line upper-line"></div>
             <div class="horizontal-line left-line"></div>
-            <div class="circle"></div>
+            <div class="circle" style="display: none;"></div>
             <div class="rectanglular-bg"></div>
             <a href="https://berkayyildizmimarlik.com/works/"
                 style="text-decoration: none; color: black; height: 100%;">
