--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,13 @@
             <h3>Contact</h3>
             <p>T: <a href="tel:+905071860835">+90 507 186 0835</a></p>
             <p>E: <a href="mailto:info@berkayyildizmimarlik.com">info@berkayyildizmimarlik.com</a></p>
-            <p>Mansuroğlu Mah. 286/3 Sk. No: 14/B Bayraklı/İzmir</p>
+            <p>
+                <a href="https://www.google.com/maps?q=Mansuroğlu+Mah.+286/3+Sk.+No:+14B+Bayraklı/İzmir" target="_blank"
+                    rel="noopener noreferrer">
+                    Mansuroğlu Mah. 286/3 Sk. No: 14B <br>
+                    Bayraklı/İzmir
+                </a>
+            </p>
         </div>
         <div class="follow-us">
             <h3>Follow Us</h3>
