--- a/contact/index.html
+++ b/contact/index.html
@@ -75,9 +75,10 @@
 
         </section>
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4471.201935008622!2d27.18324967591557!3d38.45180657182265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b962b1e8a579f7%3A0x6b490593d986107a!2zTWFuc3Vyb8SfbHUsIDI4Ni8zLiBTay4gTm86MTQgRDpiLCAzNTUzNSBCYXlyYWtsxLEvxLB6bWly!5e1!3m2!1sen!2str!4v1731596696726!5m2!1sen!2str"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4471.227396923728!2d27.184762775915434!3d38.45139567182262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b962b1964e4561%3A0x394a5d0be973271a!2zTWFuc3Vyb8SfbHUsIDI4Ni8zLiBTay4gMTRCLCAzNTUzNSBCYXlyYWtsxLEvxLB6bWly!5e1!3m2!1sen!2str!4v1731597389087!5m2!1sen!2str"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
 
     </div>
 
