--- a/contact/index.html
+++ b/contact/index.html
@@ -50,7 +50,7 @@
                 <p>
                     <a href="https://www.google.com/maps?q=Mansuroğlu+Mah.+286/3+Sk.+No:+14B+Bayraklı/İzmir"
                         target="_blank" rel="noopener noreferrer">
-                        Mansuroğlu Mah. 286/3 Sk. No: 14B <br>
+                        Mansuroğlu Mah. 286/3 Sk. No: 14/B <br>
                         Bayraklı/İzmir
                     </a>
                 </p>
