--- a/contact/index.html
+++ b/contact/index.html
@@ -76,7 +76,7 @@
         </section>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4471.227396923728!2d27.184762775915434!3d38.45139567182262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b962b1964e4561%3A0x394a5d0be973271a!2zTWFuc3Vyb8SfbHUsIDI4Ni8zLiBTay4gMTRCLCAzNTUzNSBCYXlyYWtsxLEvxLB6bWly!5e1!3m2!1sen!2str!4v1731597389087!5m2!1sen!2str"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
 
